Refactor sidebar to Tailwind component

--- a/frontend/2fa.html
+++ b/frontend/2fa.html
@@ -24,7 +24,7 @@
 </head>
 <body class="bg-gradient-to-b from-indigo-50 to-white" data-api-base="../php_backend/public">
     <div class="flex min-h-screen">
-        <nav id="menu" class="w-64 flex-shrink-0 bg-white border-r p-6"></nav>
+        <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-white border-r p-6 overflow-y-auto"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <div class="flex items-center mb-4">
                 <h1 class="text-2xl font-semibold flex-1 text-indigo-700"><i class="fas fa-shield-halved inline w-6 h-6 mr-2"></i>Two-Factor Authentication</h1>
