--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
 </head>
 <body class="bg-gradient-to-b from-indigo-50 to-white">
     <div class="flex min-h-screen">
-        <nav id="menu" class="w-64 flex-shrink-0 bg-white/80 backdrop-blur border-r p-6 shadow"></nav>
+        <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-white border-r p-6 overflow-y-auto shadow"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <h1 class="text-3xl font-semibold mb-4 text-indigo-700">Welcome to <span id="landing-site-name">Finance Manager</span></h1>
             <p class="text-gray-700">Select an option from the menu to get started exploring your finances. Each section opens tools and dashboards that help you understand where your money goes.</p>
