--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -79,3 +79,8 @@
     </ul>
   </div>
 </div>
+
+<div id="user-info" class="flex items-center mt-auto pt-4 border-t">
+  <i id="user-icon" class="fas fa-user mr-2"></i>
+  <span id="current-user">&nbsp;</span>
+</div>
