--- a/frontend/graphs.html
+++ b/frontend/graphs.html
@@ -70,7 +70,7 @@
     <script>
 
     // Retrieve data for the chosen year and draw charts with 3D bars where applicable
-    const gradientColors = ['#4B0082', '#40826D', '#50C878', '#AAF0D1'];
+    const chartColors = Highcharts.getOptions().colors;
     let segmentTable;
 
     function columnTooltip(){
@@ -191,6 +191,7 @@
             }));
 
             Highcharts.chart('monthly-chart', {
+                colors: chartColors,
                 chart: {
                     type: 'column',
 
@@ -222,6 +223,7 @@
                 }, [])
             }));
             Highcharts.chart('cumulative-chart', {
+                colors: chartColors,
                 chart: {
                     type: 'column',
 
@@ -243,6 +245,7 @@
                 .filter(c => parseFloat(c.total) < 0)
                 .map(c => ({ name: c.name, y: Math.abs(parseFloat(c.total)) }));
             Highcharts.chart('pie-chart', {
+                colors: chartColors,
                 chart: {
 
                     type: 'pie'
@@ -258,7 +261,7 @@
             const outgoingTags = yearly.tags.filter(t => parseFloat(t.total) < 0);
 
             Highcharts.chart('income-tag-chart', {
-                colors: gradientColors,
+                colors: chartColors,
                 chart: {
                     type: 'bar',
                     options3d: { enabled: true, alpha: 0, beta: 0, depth: 50 }
@@ -275,7 +278,7 @@
             });
 
             Highcharts.chart('outgoing-tag-chart', {
-                colors: gradientColors,
+                colors: chartColors,
                 chart: {
                     type: 'bar',
                     options3d: { enabled: true, alpha: 0, beta: 0, depth: 50 }
@@ -292,7 +295,7 @@
             });
 
             Highcharts.chart('scatter-chart', {
-                colors: gradientColors,
+                colors: chartColors,
                 chart: {
 
                     type: 'scatter'
@@ -336,6 +339,7 @@
     function renderSunburst(yearly, categories, chartId, chartTitle){
         const { data, segmentTotals } = buildHierarchy(yearly, categories);
         Highcharts.chart(chartId, {
+            colors: chartColors,
             series: [{
                 type: 'sunburst',
                 data: data,
@@ -363,8 +367,9 @@
 
     function renderHierarchyCharts(data){
         const edges = data.filter(d => d.parent).map(d => [d.parent, d.id]);
-        const nodes = data.map(d => ({ id: d.id, name: d.name }));
+        const nodes = data.map((d, i) => ({ id: d.id, name: d.name, color: chartColors[i % chartColors.length] }));
         Highcharts.chart('network-graph', {
+            colors: chartColors,
             chart: { type: 'networkgraph' },
 
             title: { text: 'Segment / Category Network' },
@@ -376,7 +381,7 @@
             }]
         });
         Highcharts.chart('treegraph-chart', {
-
+            colors: chartColors,
             chart: {
                 spacingBottom: 30,
                 marginRight: 120,
@@ -459,7 +464,7 @@
             ]
         });
         Highcharts.chart('segment-chart', {
-            colors: gradientColors,
+            colors: chartColors,
             chart: { type: 'column' },
             title: { text: 'Segment Totals' },
             xAxis: { categories: segments.map(s => s.name) },
