--- a/frontend/all_years_dashboard.html
+++ b/frontend/all_years_dashboard.html
@@ -49,7 +49,7 @@
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/sunburst.js"></script>
     <script>
-    const gradientColors = ['#4B0082', '#40826D', '#50C878', '#AAF0D1'];
+    const chartColors = Highcharts.getOptions().colors;
     function columnTooltip(){
         const total = this.series.yData.reduce((sum, v) => sum + v, 0);
         const pct = total ? (this.y / total * 100) : 0;
@@ -113,7 +113,7 @@
     // Draw a column chart summarising totals
     function buildChart(id, title, data){
         Highcharts.chart(id, {
-            colors: gradientColors,
+            colors: chartColors,
             chart: { type: 'column' },
             title: { text: title },
             xAxis: { categories: data.map(d => d.name) },
