--- a/frontend/group_dashboard.html
+++ b/frontend/group_dashboard.html
@@ -42,7 +42,7 @@
     <script src="js/tabulator-tailwind.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script>
-    const gradientColors = ['#4B0082', '#40826D', '#50C878', '#AAF0D1'];
+    const chartColors = Highcharts.getOptions().colors;
     function columnTooltip(){
         const total = this.series.yData.reduce((sum, v) => sum + v, 0);
         const pct = total ? (this.y / total * 100) : 0;
@@ -126,7 +126,7 @@
     // Create a column chart for the supplied dataset
     function buildChart(id, title, data){
         Highcharts.chart(id, {
-            colors: gradientColors,
+            colors: chartColors,
             chart: { type: 'column' },
             title: { text: title },
             xAxis: { categories: data.map(d => d.name) },
