--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -1,5 +1,9 @@
 <!-- Navigation menu shared across pages -->
-<h2 class="text-xl font-semibold text-gray-700 mb-4">Menu</h2>
+<div class="flex items-center space-x-2 mb-4">
+  <img src="/favicon.svg" alt="Finance Manager logo" class="h-8 w-8" />
+  <span id="site-title" class="text-xl font-semibold text-gray-700">Personal Finance Manager</span>
+  <span id="release-number" class="bg-gray-200 text-gray-700 text-xs px-2 py-0.5 rounded">v0.0.0</span>
+</div>
 <div class="space-y-2">
   <div class="group">
     <h3 class="text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Start Here</h3>
