--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -1,5 +1,11 @@
 <!-- Navigation menu shared across pages -->
-<h2 class="text-xl font-semibold text-gray-700 mb-4">Menu</h2>
+<div class="flex items-center mb-4 space-x-2">
+  <img src="/favicon.svg" alt="Finance Manager logo" class="h-8 w-8" />
+  <div class="flex flex-col">
+    <span id="site-title" class="text-xl font-semibold text-gray-700">Personal Finance Manager</span>
+    <span id="release-number" class="bg-gray-200 text-gray-700 text-xs px-2 py-0.5 rounded mt-1 w-max">v0.0.0</span>
+  </div>
+</div>
 <div class="space-y-2">
   <div class="group">
     <h3 class="text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Start Here</h3>
