--- a/frontend/topbar.html
+++ b/frontend/topbar.html
@@ -4,9 +4,9 @@
     <div class="flex items-center space-x-4">
       <img src="/favicon.svg" alt="Finance Manager logo" class="h-8 w-8" />
       <button id="menu-toggle" class="md:hidden bg-indigo-700 text-white p-2 rounded"><i class="fas fa-bars h-4 w-4"></i></button>
-      <div class="font-bold text-lg hidden md:flex items-center">
-        <span id="site-title">Personal Finance Manager</span>
-        <span id="release-number" class="ml-2 bg-indigo-700 text-white text-[0.675rem] px-2 py-0.5 rounded">v0.0.0</span>
+      <div class="hidden md:flex flex-col">
+        <span id="site-title" class="font-bold text-lg">Personal Finance Manager</span>
+        <span id="release-number" class="bg-indigo-700 text-white text-[0.675rem] px-2 py-0.5 rounded mt-1 w-max">v0.0.0</span>
       </div>
     </div>
     <div id="topbar-right" class="flex items-center space-x-4 transition-transform duration-300">
