--- a/frontend/index.html
+++ b/frontend/index.html
@@ -81,6 +81,14 @@
                         <p class="text-gray-700">Back up and restore your data with ease.</p>
                     </div>
                     <div class="flex items-start space-x-3">
+                        <i class="fas fa-magic text-indigo-600 fa-2x"></i>
+                        <p class="text-gray-700">Generate monthly budgets with AI suggestions.</p>
+                    </div>
+                    <div class="flex items-start space-x-3">
+                        <i class="fas fa-file-export text-indigo-600 fa-2x"></i>
+                        <p class="text-gray-700">Export transactions to OFX, CSV or XLSX.</p>
+                    </div>
+                    <div class="flex items-start space-x-3">
                         <i class="fas fa-user-cog text-indigo-600 fa-2x"></i>
                         <p class="text-gray-700">Manage user accounts, processes and logs.</p>
                     </div>
