--- a/frontend/index.html
+++ b/frontend/index.html
@@ -94,11 +94,22 @@
                     </div>
                 </div>
             </section>
+
+            <section class="mt-8 bg-white p-8 rounded-lg shadow-lg">
+                <h2 class="text-2xl font-semibold mb-4 text-indigo-700"><i class="fas fa-link mr-2"></i>Link Preview</h2>
+                <p class="mb-4">Enter a URL to view its title and description.</p>
+                <div class="flex flex-col space-y-2">
+                    <input id="preview-url" type="text" class="border p-2 rounded" placeholder="https://example.com" data-help="Paste a link to preview.">
+                    <div id="link-preview" class="mt-2"></div>
+                </div>
+            </section>
         </main>
     </div>
 
     <script src="js/menu.js"></script>
     <script src="js/version.js"></script>
+    <script src="js/input_help.js"></script>
+    <script src="js/link_preview.js"></script>
     <script src="js/overlay.js"></script>
   </body>
 </html>
