Add Open Graph metadata and remove link preview feature

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Inter:wght@400&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" sizes="any" href="/favicon.svg">
+    <meta property="og:title" content="Finance Manager">
+    <meta property="og:description" content="Manage your finances with budgets, reports and more.">
+    <meta property="og:image" content="/favicon.svg">
     <!-- Font Awesome icons loaded via menu.js -->
     <style>
         body { font-family: 'Inter', sans-serif; }
@@ -94,11 +97,13 @@
                     </div>
                 </div>
             </section>
+
         </main>
     </div>
 
     <script src="js/menu.js"></script>
     <script src="js/version.js"></script>
+    <script src="js/input_help.js"></script>
     <script src="js/overlay.js"></script>
   </body>
 </html>
