--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,24 +22,27 @@
     </style>
 </head>
 <body class="bg-gradient-to-b from-indigo-50 to-white">
-    <div class="flex min-h-screen">
+    <div class="flex flex-col md:flex-row min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-white border-r p-6 overflow-y-auto shadow"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
-            <h1 class="text-3xl font-semibold mb-4 text-indigo-700">Welcome to <span id="landing-site-name">Finance Manager</span></h1>
-            <p class="text-gray-700">Select an option from the menu to get started exploring your finances. Each section opens tools and dashboards that help you understand where your money goes.</p>
-            <p id="version" class="text-gray-500">Version: loading...</p>
+            <section class="bg-white p-8 rounded shadow text-center mb-8">
+                <h1 class="text-4xl font-semibold mb-4 text-indigo-700">Welcome to <span id="landing-site-name">Finance Manager</span></h1>
+                <p class="text-gray-700 mb-4">Select an option from the menu to get started exploring your finances. Each section opens tools and dashboards that help you understand where your money goes.</p>
+                <a href="upload.html" class="accent inline-block bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700">Get Started</a>
+                <p id="version" class="text-gray-500 mt-2">Version: loading...</p>
+            </section>
 
-            <section class="mt-8 grid grid-cols-1 md:grid-cols-3 gap-4">
+            <section class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-8">
                 <div class="bg-white p-6 rounded shadow flex flex-col items-center text-center">
-                    <i class="fas fa-chart-line fa-6x mb-2"></i>
+                    <i class="fas fa-chart-line fa-6x mb-2 text-indigo-600"></i>
                     <p class="text-gray-700">Visualise your spending trends with clear charts that highlight where your money goes.</p>
                 </div>
                 <div class="bg-white p-6 rounded shadow flex flex-col items-center text-center">
-                    <i class="fas fa-piggy-bank fa-6x mb-2"></i>
+                    <i class="fas fa-piggy-bank fa-6x mb-2 text-indigo-600"></i>
                     <p class="text-gray-700">Track savings effortlessly to see how your balance grows over time.</p>
                 </div>
                 <div class="bg-white p-6 rounded shadow flex flex-col items-center text-center">
-                    <i class="fas fa-wallet fa-6x mb-2"></i>
+                    <i class="fas fa-wallet fa-6x mb-2 text-indigo-600"></i>
                     <p class="text-gray-700">Manage budgets with ease by setting targets and watching your progress.</p>
                 </div>
             </section>
