Add legends and descriptions to charts

--- a/frontend/account.html
+++ b/frontend/account.html
@@ -21,7 +21,7 @@
             <p id="account-details" class="mb-4 text-gray-600"></p>
             <p class="mb-4">View the balance over time based on the latest bank statement.</p>
             <div class="bg-white p-6 rounded shadow">
-                <div id="balance-chart" style="height:400px"></div>
+                <div id="balance-chart" style="height:400px" data-chart-desc="Line chart of account balance over time."></div>
             </div>
 
             <div class="bg-white p-6 rounded shadow mt-6">
