--- a/frontend/account_dashboard.html
+++ b/frontend/account_dashboard.html
@@ -21,7 +21,7 @@
             <p class="mb-4">See an overview of account balances and recent activity. Charts and tables reveal how money flows through each account. Sort codes and account numbers are shown where applicable; credit cards list only their card number.</p>
             <div class="bg-white p-6 rounded shadow">
                 <div id="accounts-table"></div>
-                <div id="accounts-chart" class="mt-4" style="height:400px"></div>
+                <div id="accounts-chart" class="mt-4" style="height:400px" data-chart-desc="Waterfall chart showing balance changes per account."></div>
             </div>
         </main>
     </div>
