--- a/frontend/monthly_statement.html
+++ b/frontend/monthly_statement.html
@@ -77,7 +77,7 @@
             <div class="mt-4">
                 <div class="bg-white p-6 rounded shadow">
 
-                    <div id="category-donut" style="height:500px;"></div>
+                    <div id="category-donut" style="height:500px;" data-chart-desc="Donut chart of spending by category for the selected month."></div>
 
                 </div>
             </div>
