--- a/frontend/search.html
+++ b/frontend/search.html
@@ -27,7 +27,7 @@
             </form>
             <div id="results-grid" class="mt-4"></div>
             <p id="total" class="mt-4"></p>
-            <div id="results-chart" class="mt-6" style="height:400px"></div>
+            <div id="results-chart" class="mt-6" style="height:400px" data-chart-desc="Column chart showing spending totals from search results."></div>
         </main>
     </div>
     <script src="js/menu.js"></script>
