--- a/frontend/budgets.html
+++ b/frontend/budgets.html
@@ -45,7 +45,7 @@
         </section>
         <section class="bg-white p-6 rounded shadow">
             <h2 class="text-xl font-semibold mb-4">Budget Progress</h2>
-            <div id="budget-chart" style="height:400px"></div>
+            <div id="budget-chart" style="height:400px" data-chart-desc="Bullet chart comparing spending to budgets."></div>
         </section>
     </main>
 </div>
