--- a/frontend/monthly_dashboard.html
+++ b/frontend/monthly_dashboard.html
@@ -43,25 +43,25 @@
 
             <h2 class="text-xl font-semibold mt-6 mb-2">Tag Totals</h2>
             <div id="tags-table" class="mt-2"></div>
-            <div id="tags-chart" class="mt-4" style="height:400px"></div>
+            <div id="tags-chart" class="mt-4" style="height:400px" data-chart-desc="Column chart of tag totals for selected month."></div>
 
             <h2 class="text-xl font-semibold mt-6 mb-2">Category Totals</h2>
             <div id="categories-table" class="mt-2"></div>
-            <div id="categories-chart" class="mt-4" style="height:400px"></div>
+            <div id="categories-chart" class="mt-4" style="height:400px" data-chart-desc="Column chart of category totals for selected month."></div>
 
             <h2 class="text-xl font-semibold mt-6 mb-2">Category & Tag Breakdown</h2>
             <div id="category-tag-sunburst" class="mt-2 grid grid-cols-1 md:grid-cols-2 gap-4">
-                <div id="category-tag-income" style="height:400px"></div>
-                <div id="category-tag-outgoings" style="height:400px"></div>
+                <div id="category-tag-income" style="height:400px" data-chart-desc="Sunburst chart of income by category and tag for selected month."></div>
+                <div id="category-tag-outgoings" style="height:400px" data-chart-desc="Sunburst chart of outgoings by category and tag for selected month."></div>
             </div>
 
             <h2 class="text-xl font-semibold mt-6 mb-2">Segment Totals</h2>
             <div id="segments-table" class="mt-2"></div>
-            <div id="segments-chart" class="mt-4" style="height:400px"></div>
+            <div id="segments-chart" class="mt-4" style="height:400px" data-chart-desc="Column chart of segment totals for selected month."></div>
 
             <h2 class="text-xl font-semibold mt-6 mb-2">Group Totals</h2>
             <div id="groups-table" class="mt-2"></div>
-            <div id="groups-chart" class="mt-4" style="height:400px"></div>
+            <div id="groups-chart" class="mt-4" style="height:400px" data-chart-desc="Column chart of group totals for selected month."></div>
         </main>
     </div>
     <script src="js/menu.js"></script>
