--- a/frontend/projects.html
+++ b/frontend/projects.html
@@ -37,7 +37,7 @@
             </div>
             <div>
                 <h2 class="text-xl font-semibold mb-4">Cost vs Quality</h2>
-                <div id="project-bubble-chart" style="height:800px"></div>
+                <div id="project-bubble-chart" style="height:800px" data-chart-desc="Bubble chart plotting cost vs quality with bubble size representing score."></div>
             </div>
             <div>
                 <h2 class="text-xl font-semibold mb-4">Project Priorities</h2>
