Add dark grey borders to card components

--- a/frontend/budgets.html
+++ b/frontend/budgets.html
@@ -28,7 +28,7 @@
                 <button type="submit" class="bg-indigo-600 text-white px-4 py-2 rounded self-end">Set Budget</button>
             </form>
         </section>
-        <section class="bg-white p-6 rounded shadow">
+        <section class="bg-white p-6 rounded shadow border border-gray-400">
             <h2 class="text-xl font-semibold mb-4">AI Budgeting</h2>
 
             <p class="mb-4">Send your savings goal and the last 12 months of category totals to the AI to propose next month's budgets and provide a brief explanation.</p>
@@ -43,7 +43,7 @@
             <h2 class="text-xl font-semibold mb-4">Current Budgets</h2>
             <div id="budget-table"></div>
         </section>
-        <section class="bg-white p-6 rounded shadow">
+        <section class="bg-white p-6 rounded shadow border border-gray-400">
             <h2 class="text-xl font-semibold mb-4">Budget Progress</h2>
             <div id="budget-chart" style="height:400px" data-chart-desc="Bullet chart comparing spending to budgets."></div>
         </section>
