--- a/frontend/dedupe.html
+++ b/frontend/dedupe.html
@@ -17,7 +17,7 @@
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Duplicate Transactions</h1>
             <p class="mb-4">Remove unwanted duplicate entries to keep your records accurate.</p>
-            <div class="bg-white p-6 rounded shadow">
+            <div class="bg-white p-6 rounded shadow border border-gray-400">
                 <div class="mb-4 space-x-2">
                     <button id="refresh" class="bg-indigo-600 text-white px-3 py-1 rounded"><i class="fas fa-rotate inline w-4 h-4 mr-1"></i>Refresh</button>
                     <button id="dedupe-all" class="bg-red-600 text-white px-3 py-1 rounded"><i class="fas fa-clone inline w-4 h-4 mr-1"></i>Dedupe All</button>
