--- a/frontend/pivot.html
+++ b/frontend/pivot.html
@@ -35,7 +35,7 @@
 
             </section>
 
-            <section id="detail-card" class="hidden bg-white p-6 rounded shadow space-y-4">
+            <section id="detail-card" class="hidden bg-white p-6 rounded shadow border border-gray-400 space-y-4">
 
                 <div class="flex justify-between items-center">
                     <h2 id="detail-title" class="text-xl font-semibold text-indigo-700"></h2>
