--- a/frontend/2fa.html
+++ b/frontend/2fa.html
@@ -26,7 +26,7 @@
             </div>
             <p class="mb-4">Set up TOTP-based authentication and verify your one-time codes.</p>
 
-            <div class="bg-white p-6 rounded shadow mb-6">
+            <div class="bg-white p-6 rounded shadow border border-gray-400 mb-6">
                 <h2 class="font-['Montserrat'] text-xl mb-4">Setup</h2>
                 <form id="generate-form" class="space-y-4">
                     <input id="gen-username" type="text" placeholder="Username" class="border p-2 rounded w-full" data-help="Enter your account username">
@@ -37,7 +37,7 @@
 
             </div>
 
-            <div class="bg-white p-6 rounded shadow">
+            <div class="bg-white p-6 rounded shadow border border-gray-400">
                 <h2 class="font-['Montserrat'] text-xl mb-4">Verify</h2>
                 <form id="verify-form" class="space-y-4">
                     <input id="ver-username" type="text" placeholder="Username" class="border p-2 rounded w-full" data-help="Enter your account username">
