--- a/frontend/account.html
+++ b/frontend/account.html
@@ -20,11 +20,11 @@
             <h1 id="account-name" class="text-2xl font-semibold mb-4 text-indigo-700">Account Balance</h1>
             <p id="account-details" class="mb-4 text-gray-600"></p>
             <p class="mb-4">View the balance over time based on the latest bank statement.</p>
-            <div class="bg-white p-6 rounded shadow">
+            <div class="bg-white p-6 rounded shadow border border-gray-400">
                 <div id="balance-chart" style="height:400px" data-chart-desc="Line chart of account balance over time."></div>
             </div>
 
-            <div class="bg-white p-6 rounded shadow mt-6">
+            <div class="bg-white p-6 rounded shadow border border-gray-400 mt-6">
                 <div id="statement-table"></div>
             </div>
 
