--- a/frontend/account_dashboard.html
+++ b/frontend/account_dashboard.html
@@ -19,7 +19,7 @@
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Account Dashboard</h1>
             <p class="mb-4">See an overview of account balances and recent activity. Charts and tables reveal how money flows through each account. Sort codes and account numbers are shown where applicable; credit cards list only their card number.</p>
-            <div class="bg-white p-6 rounded shadow">
+            <div class="bg-white p-6 rounded shadow border border-gray-400">
                 <div id="accounts-table"></div>
                 <div id="accounts-chart" class="mt-4" style="height:400px" data-chart-desc="Waterfall chart showing balance changes per account."></div>
             </div>
