--- a/frontend/group_dashboard.html
+++ b/frontend/group_dashboard.html
@@ -24,13 +24,13 @@
             </label>
 
             <h2 class="text-xl font-semibold mt-6 mb-2">Monthly Totals</h2>
-            <div class="bg-white p-6 rounded shadow">
+            <div class="bg-white p-6 rounded shadow border border-gray-400">
                 <div id="month-table"></div>
                 <div id="month-chart" class="mt-4" style="height:400px" data-chart-desc="Column chart of monthly totals for each group."></div>
             </div>
 
             <h2 class="text-xl font-semibold mt-6 mb-2">Yearly Totals</h2>
-            <div class="bg-white p-6 rounded shadow">
+            <div class="bg-white p-6 rounded shadow border border-gray-400">
                 <div id="year-table"></div>
                 <div id="year-chart" class="mt-4" style="height:400px" data-chart-desc="Column chart of yearly totals for each group."></div>
             </div>
