--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
     <div class="flex flex-col md:flex-row min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-white border-r p-6 overflow-y-auto shadow"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
-            <section class="bg-white p-8 rounded shadow text-center mb-8">
+            <section class="bg-white p-8 rounded shadow border border-gray-400 text-center mb-8">
                 <h1 class="font-['Roboto'] text-4xl font-semibold mb-4 text-indigo-700">Welcome to <span id="landing-site-name">Finance Manager</span></h1>
                 <p class="text-gray-700 mb-4">Select an option from the menu to get started exploring your finances. Each section opens tools and dashboards that help you understand where your money goes.</p>
                 <a href="upload.html" class="inline-block bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700 font-['Source_Sans_Pro'] font-light">Get Started</a>
@@ -28,15 +28,15 @@
             </section>
 
             <section class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-8">
-                <div class="bg-white p-6 rounded shadow flex flex-col items-center text-center">
+                <div class="bg-white p-6 rounded shadow border border-gray-400 flex flex-col items-center text-center">
                     <i class="fas fa-chart-line fa-6x mb-2 text-indigo-600"></i>
                     <p class="text-gray-700">Visualise your spending trends with clear charts that highlight where your money goes.</p>
                 </div>
-                <div class="bg-white p-6 rounded shadow flex flex-col items-center text-center">
+                <div class="bg-white p-6 rounded shadow border border-gray-400 flex flex-col items-center text-center">
                     <i class="fas fa-piggy-bank fa-6x mb-2 text-indigo-600"></i>
                     <p class="text-gray-700">Track savings effortlessly to see how your balance grows over time.</p>
                 </div>
-                <div class="bg-white p-6 rounded shadow flex flex-col items-center text-center">
+                <div class="bg-white p-6 rounded shadow border border-gray-400 flex flex-col items-center text-center">
                     <i class="fas fa-wallet fa-6x mb-2 text-indigo-600"></i>
                     <p class="text-gray-700">Manage budgets with ease by setting targets and watching your progress.</p>
                 </div>
