--- a/frontend/projects.html
+++ b/frontend/projects.html
@@ -22,7 +22,7 @@
         <h1 class="font-['Roboto'] text-2xl font-semibold mb-4 text-indigo-700">Projects</h1>
         <p class="mb-4">Review your planned projects, explore costs and compare their priorities.</p>
 
-        <section class="bg-white p-6 rounded shadow space-y-6">
+        <section class="bg-white p-6 rounded shadow border border-gray-400 space-y-6">
             <div>
                 <h2 class="font-['Roboto'] text-xl font-semibold mb-4">Budget Planning</h2>
                 <div class="flex items-end space-x-4">
