--- a/frontend/projects_archived.html
+++ b/frontend/projects_archived.html
@@ -24,7 +24,7 @@
     <main class="flex-1 min-w-0 overflow-x-auto p-6 space-y-6">
         <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Archived Projects</h1>
         <p class="mb-4">Review projects that have been archived. Restore any project to make it active again.</p>
-        <section class="bg-white p-6 rounded shadow">
+        <section class="bg-white p-6 rounded shadow border border-gray-400">
             <div id="archived-projects-table"></div>
         </section>
     </main>
