--- a/frontend/projects_board.html
+++ b/frontend/projects_board.html
@@ -24,7 +24,7 @@
         <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Project Board</h1>
         <p class="mb-4">Browse all active projects in a card layout.</p>
 
-        <section class="bg-white p-6 rounded shadow">
+        <section class="bg-white p-6 rounded shadow border border-gray-400">
             <div id="projects-board" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4"></div>
         </section>
     </main>
@@ -44,7 +44,7 @@ async function loadProjects(){
     board.innerHTML = '';
     projects.forEach(p => {
         const card = document.createElement('div');
-        card.className = 'bg-white p-4 rounded shadow flex flex-col space-y-2';
+        card.className = 'bg-white p-4 rounded shadow border border-gray-400 flex flex-col space-y-2';
 
         const header = document.createElement('div');
         header.className = 'flex justify-between items-start';
