--- a/frontend/transaction.html
+++ b/frontend/transaction.html
@@ -38,7 +38,7 @@
             }
 
             const card = document.createElement('div');
-            card.className = 'relative bg-white p-6 rounded shadow';
+            card.className = 'relative bg-white p-6 rounded shadow border border-gray-400';
 
             function createBadge(text, colorClasses) {
                 const span = document.createElement('span');
