Expand home page with new features

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -79,7 +79,7 @@
                     </div>
                     <div class="flex items-start space-x-3">
                         <i class="fas fa-database text-indigo-600 fa-2x"></i>
-                        <p class="text-gray-700">Back up and restore your data with ease.</p>
+                        <p class="text-gray-700">Back up and restore your data and projects with ease.</p>
                     </div>
                     <div class="flex items-start space-x-3">
                         <i class="fas fa-magic text-indigo-600 fa-2x"></i>
@@ -92,6 +92,26 @@
                     <div class="flex items-start space-x-3">
                         <i class="fas fa-user-cog text-indigo-600 fa-2x"></i>
                         <p class="text-gray-700">Manage user accounts, processes and logs.</p>
+                    </div>
+                    <div class="flex items-start space-x-3">
+                        <i class="fas fa-right-left text-indigo-600 fa-2x"></i>
+                        <p class="text-gray-700">Flag transfers automatically so income and expense totals stay accurate.</p>
+                    </div>
+                    <div class="flex items-start space-x-3">
+                        <i class="fas fa-th-large text-indigo-600 fa-2x"></i>
+                        <p class="text-gray-700">Organise projects on a board of cards with quick actions.</p>
+                    </div>
+                    <div class="flex items-start space-x-3">
+                        <i class="fas fa-bullseye text-indigo-600 fa-2x"></i>
+                        <p class="text-gray-700">Compare project benefits with bubble charts and configurable axes.</p>
+                    </div>
+                    <div class="flex items-start space-x-3">
+                        <i class="fas fa-archive text-indigo-600 fa-2x"></i>
+                        <p class="text-gray-700">Archive projects and restore them whenever needed.</p>
+                    </div>
+                    <div class="flex items-start space-x-3">
+                        <i class="fas fa-question-circle text-indigo-600 fa-2x"></i>
+                        <p class="text-gray-700">Get help on any page with built-in self-help overlays.</p>
                     </div>
                 </div>
             </section>
